--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "api",
   "version": "1.0.0",
   "description": "<div align=\"center\"> \t<h1>Hamburgabana API Rest</h1> \t<h3>La API REST del sitio de la tienda Hamburgabana, hecha con Express.</h3> </div>",
-  "main": "index.js",
+  "main": "./server-express.js",
   "scripts": {
+    "start": "nmp install ; node server-express.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
